<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.micha.viewsandlayouts.MainActivity">


    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_textview" />

        <TextView
            android:id="@+id/secondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_textview" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSomething"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_something" />

        <Button
            android:id="@+id/btnElse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSomething"
            android:layout_toEndOf="@id/btnSomething"
            android:layout_toRightOf="@id/btnSomething"
            android:onClick="onDoSomethingElse"
            android:text="@string/do_something_else" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/defaultFrameHeight">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/some_text" />
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_web_view"
        android:onClick="onShowWebView"/>
</LinearLayout>
